AASES-Project/force-app/main/default/objects/AnswerSheet__c/AnswerSheet__c.object-meta.xml
<CustomObject>
    <fields>
        <fullName>RollNo__c</fullName>
        <label>Roll Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Student Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slot__c</fullName>
        <label>Slot</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExamType__c</fullName>
        <label>Exam Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalMarks__c</fullName>
        <label>Total Marks</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answer1__c</fullName>
        <label>Answer 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer2__c</fullName>
        <label>Answer 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer3__c</fullName>
        <label>Answer 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer4__c</fullName>
        <label>Answer 4</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer5__c</fullName>
        <label>Answer 5</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer6__c</fullName>
        <label>Answer 6</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer7__c</fullName>
        <label>Answer 7</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer8__c</fullName>
        <label>Answer 8</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer9__c</fullName>
        <label>Answer 9</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer10__c</fullName>
        <label>Answer 10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Answer Sheet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Answer Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Answer Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>