AASES-Project/force-app/main/default/objects/AnswerSheet__c/fields/Answer10__c.field-meta.xml
<CustomField>
    <fullName>Answer10__c</fullName>
    <label>Answer 10</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>