AASES-Project/force-app/main/default/objects/AnswerSheet__c/fields/Answer1__c.field-meta.xml
<CustomField>
    <fullName>Answer1__c</fullName>
    <label>Answer 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>