AASES-Project/force-app/main/default/objects/AnswerSheet__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Student Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>